k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garabu
  labels:
    name: garabu
    environment: production
